--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lorem Ipsum",
   "main": "citylib.js",
   "scripts": {
-    "test": "mocha -r esm"
+    "test": "mocha -r esm && standard"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/nicky-nym/city3d#readme",
   "devDependencies": {
     "esm": "^3.2.25",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "standard": "^14.3.1"
   },
   "dependencies": {
-    "stats.js": "^0.17.0"
+    "stats.js": "^0.17.0",
+    "three": "^0.111.0"
   }
 }
