--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nicky-nym/city3d#readme",
   "devDependencies": {
+    "ajv": "^6.10.2",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
     "mocha": "^6.2.2",
