--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lorem Ipsum",
   "main": "citylib.js",
   "scripts": {
-    "test": "mocha -r esm --recursive && standard"
+    "rollup": "rollup --config rollup.config.js",
+    "test": "mocha -r esm --recursive && standard 'src/**/*.js' 'test/**/*.js' 'content/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "chai": "^4.2.0",
     "esm": "^3.2.25",
     "mocha": "^6.2.2",
+    "rollup": "^1.32.0",
     "standard": "^14.3.1"
   },
   "dependencies": {
