added build directory to .gitignore & fixed package.json "test" script to remove args to standard.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "citylib.js",
   "scripts": {
     "rollup": "rollup --config rollup.config.js",
-    "test": "mocha -r esm --recursive && standard 'src/**/*.js' 'test/**/*.js' 'content/**/*.js'"
+    "test": "mocha -r esm --recursive && standard"
   },
   "repository": {
     "type": "git",
